--- a/style.css
+++ b/style.css
@@ -28,32 +28,57 @@ body {
     margin: 0;
     padding: 0;
 }
-.conteiner{
-height: 100vh;
-display: grid;
-grid-template-columns: 50% 50%;
+
+.conteiner {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
-.principal{
-background-image: url(Background.png);
-background-repeat: no-repeat;
-background-size: contain;
-align-items: center;
-text-align: center;
+
+.principal {
+    background-image: url(Background.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    align-items: center;
+    text-align: center;
 }
-.conteiner__botao{
-background-color: var(--botao-azul);
-border-radius: 5px;
-padding: 1em;
-color: var(--branco-principal);
-display: block;
-text-decoration: none;
-margin-bottom: 1em;
+
+.conteiner__botao {
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branco-principal);
+    display: block;
+    text-decoration: none;
+    margin-bottom: 1em;
 }
-.botaos-secundario{
+
+.botaos-secundario {
     background-color: transparent;
-border: 2px solid var(--branco-principal);
+    border: 2px solid var(--branco-principal);
+    }
 
+    .container__aviso {
+        font-size: 12px;
+        color: var(--cinza-secundario);
+    }
 
+    .container__titulo {
+        font-size: 28px;
+        font-weight: 700;
+    }
+
+    .container__imagem {
+        margin: 1em 0 2em 0;
+    }
+
+    .container__caixa {
+        margin: 0 6em;
+    }
+
+    .secundario__imagem {
+        width: 80%;
+    }
 
 
 
